# tourmaline

./: .gitignore  Cargo.toml  README.md  build.rs
configs/crystal/hooks/: install-extra-packages.pre.nu  setup-root-user.post.nu  setup-users.post.nu  setup-users.pre.nu
configs/crystal/scripts/: install-base.nu  setup-users.nu
src/: args.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src/scripting/: executor.rs  loader.rs  mod.rs  record.rs  record_serializer.rs  script.rs
src/tasks/: configure_locale.rs  configure_network.rs  configure_unakite.rs  create_partitions.rs  install_base.rs  install_bootloader.rs  install_desktop.rs  install_extra_packages.rs  install_flatpak.rs  install_kernels.rs  install_timeshift.rs  install_zramd.rs  mod.rs  setup_root_user.rs  setup_users.rs
