[package]
name = "tourmaline"
version = "0.1.0"
edition = "2021"

[package.metadata]
codename = "Walter White"

[lib]
name = "tourmaline"

[[bin]]
name = "trl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
miette = "5.3.0"
nu-cli = "0.68.1"
nu-command = "0.68.1"
nu-engine = "0.68.1"
nu-parser = "0.68.1"
nu-protocol = "0.68.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["rt", "io-std", "io-util", "process", "time", "macros", "tracing", "fs"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[build-dependencies]
cargo_toml = "0.12.3"
serde = { version = "1.0.144", features = ["derive"] }
