[package]
name = "tourmaline"
version = "0.1.0"
edition = "2021"

[package.metadata]
codename = "Walter White"

[lib]
name = "tourmaline"

[[bin]]
name = "trl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
embed-nu = "0.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.37"
tokio = { version = "1.23.1", features = ["rt", "io-std", "io-util", "process", "time", "macros", "tracing", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
cargo_toml = "0.12.4"
serde = { version = "1.0.145", features = ["derive"] }
